Fix gulpfile livereload task bug on styles compiling

--- a/src/style/pg-ng-sropdown.scss
+++ b/src/style/pg-ng-sropdown.scss
@@ -1,3 +1,9 @@
-// body{
-// 	background: red;
-// }
+body{
+
+	padding: 32px;
+	font-family: Verdana;
+	font-size: 16px;
+	line-height: 32px;
+	color: #ebebeb;
+	background-color: teal;
+}
