--- a/src/style/pg-ng-sropdown.css
+++ b/src/style/pg-ng-sropdown.css
@@ -3,5 +3,36 @@ body {
   font-family: Verdana;
   font-size: 16px;
   line-height: 32px;
-  color: #ebebeb;
+  color: #dbdbdb;
   background-color: teal; }
+
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit; }
+
+.pg-dropdown {
+  position: relative;
+  height: 40px;
+  width: 200px;
+  border: 1px solid #484848;
+  background-color: #aaaaaa;
+  border-radius: 4px;
+  cursor: pointer;
+  overflow: hidden;
+  transition: height 425ms cubic-bezier(0.23, 1, 0.32, 1); }
+  .pg-dropdown .current-selected-option {
+    height: 40px;
+    padding: 0 15px;
+    line-height: 39px; }
+  .pg-dropdown .dropdown-content {
+    position: relative;
+    display: block;
+    margin: 0;
+    padding: 0 15px;
+    height: calc(100% - 40px);
+    border-top: 1px solid #848484; }
+  .pg-dropdown li {
+    list-style: none; }
+  .pg-dropdown.opened {
+    height: 215px; }
