--- a/src/style/pg-ng-dropdown.scss
+++ b/src/style/pg-ng-dropdown.scss
@@ -59,6 +59,11 @@ $dropdownEasing: cubic-bezier(0.230, 1.000, 0.320, 1.000);
 	li{
 
 		list-style:none;
+		transition: opacity 300ms ease;
+
+		&.selected{
+			opacity: 0.4;
+		}
 
 	}
 
