--- a/src/style/pg-ng-dropdown.css
+++ b/src/style/pg-ng-dropdown.css
@@ -21,15 +21,33 @@ body {
   cursor: pointer;
   overflow: hidden;
   transition: height 425ms cubic-bezier(0.23, 1, 0.32, 1); }
+  .pg-dropdown .arrow-wrapper {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 40px;
+    height: 40px; }
+    .pg-dropdown .arrow-wrapper .arrow {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 0;
+      height: 0;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border-left: 5px solid transparent;
+      border-right: 5px solid transparent;
+      border-top: 10px solid #ebebeb; }
   .pg-dropdown .current-selected-option {
     height: 40px;
-    padding: 0 15px;
+    padding: 0 40px 0 15px;
     line-height: 39px; }
   .pg-dropdown .dropdown-content {
     position: relative;
     display: block;
     margin: 0;
-    padding: 0 15px;
+    padding: 6px 15px;
     height: calc(100% - 40px);
     border-top: 1px solid #848484; }
   .pg-dropdown li {
