--- a/src/style/pg-ng-dropdown.scss
+++ b/src/style/pg-ng-dropdown.scss
@@ -79,7 +79,7 @@ $dropdownEasing: cubic-bezier(0.230, 1.000, 0.320, 1.000);
 		position:relative;
 		display:block;
 		margin: 0;
-		padding: 6px $sidePadding;
+		padding: 6px 0;
 		height: calc(100% - #{($initialHeight)});
 		border-top: 1px solid #848484;
 		
@@ -88,9 +88,16 @@ $dropdownEasing: cubic-bezier(0.230, 1.000, 0.320, 1.000);
 	li{
 
 		list-style:none;
-		transition: opacity 300ms ease;
+		transition: all 300ms ease;
+		padding: 0 $sidePadding;
 
-		&.selected{
+		&:hover{
+
+			background-color: #333;
+
+		}
+
+		&.selected *{
 
 			opacity: 0.4;
 
