--- a/src/style/pg-ng-dropdown.css
+++ b/src/style/pg-ng-dropdown.css
@@ -4,7 +4,7 @@ body {
   font-size: 16px;
   line-height: 32px;
   color: #dbdbdb;
-  background-color: teal; }
+  background-color: #848484; }
 
 *, *:before, *:after {
   -webkit-box-sizing: inherit;
@@ -16,7 +16,7 @@ body {
   height: 40px;
   width: 200px;
   border: 1px solid #484848;
-  background-color: #aaaaaa;
+  background-color: dimgrey;
   border-radius: 4px;
   cursor: pointer;
   overflow: hidden;
@@ -38,18 +38,21 @@ body {
       transform: translate(-50%, -50%);
       border-left: 5px solid transparent;
       border-right: 5px solid transparent;
-      border-top: 10px solid #ebebeb; }
+      border-top: 10px solid #dbdbdb; }
   .pg-dropdown .current-selected-option {
     height: 40px;
     padding: 0 40px 0 15px;
-    line-height: 39px; }
+    line-height: 39px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none; }
   .pg-dropdown .dropdown-content {
     position: relative;
     display: block;
     margin: 0;
     padding: 6px 0;
     height: calc(100% - 40px);
-    border-top: 1px solid #848484; }
+    border-top: 1px solid rgba(72, 72, 72, 0.35); }
   .pg-dropdown li {
     list-style: none;
     transition: all 300ms ease;
