--- a/src/style/pg-ng-dropdown.scss
+++ b/src/style/pg-ng-dropdown.scss
@@ -4,8 +4,8 @@ body{
 	font-family: Verdana;
 	font-size: 16px;
 	line-height: 32px;
-	color: #dbdbdb;
-	background-color: #848484;
+	color: floralwhite;
+	background-color: cadetblue;
 }
 
 *, *:before, *:after {
@@ -16,27 +16,27 @@ body{
 	
 }
 
+.pg-dropdown{ margin: 0 50px 0 0 ; }
 
-$width: 200px;
 $initialHeight: 40px;
 $openedHeight: 215px;
 $sidePadding: 15px;
 $borderColor: #484848;
 $backgroundColor: dimgrey;
-$arrowColor: #dbdbdb;
+$arrowColor: floralwhite;
 $dropdownEasing: cubic-bezier(0.230, 1.000, 0.320, 1.000);
 
 .pg-dropdown{
 
 	position: relative;
 	height: $initialHeight;
-	width: $width;
 	border:1px solid $borderColor;
 	background-color: $backgroundColor;
 	border-radius: 4px;
 	cursor:pointer;
 	overflow: hidden;
 	transition: height 425ms $dropdownEasing;
+	float:left;
 
 	.arrow-wrapper{
 
@@ -90,9 +90,20 @@ $dropdownEasing: cubic-bezier(0.230, 1.000, 0.320, 1.000);
 
 	li{
 
+		display: block;
+		height: 30px;
 		list-style:none;
+		padding: 5px 0 0 0 ;
 		transition: all 300ms ease;
 		padding: 0 $sidePadding;
+
+		// i, span{ float:left; display: block; }
+
+		// i{
+		// 	height: 25px;
+		// 	width: 25px;
+		// 	background-color: red;
+		// }
 
 		&:hover{
 
