--- a/src/style/pg-ng-dropdown.scss
+++ b/src/style/pg-ng-dropdown.scss
@@ -20,7 +20,7 @@ body{
 
 $initialHeight: 40px;
 $openedHeight: 215px;
-$sidePadding: 15px;
+$sidePadding: 12px;
 $borderColor: #484848;
 $backgroundColor: dimgrey;
 $arrowColor: floralwhite;
@@ -81,23 +81,28 @@ $dropdownEasing: cubic-bezier(0.230, 1.000, 0.320, 1.000);
 
 	.dropdown-content{
 
+		$_padding: 6px;
 		position:relative;
 		display:block;
+		overflow-y: auto;
+		overflow-x: hidden;
 		margin: 0;
-		padding: 6px 0;
-		height: calc(100% - #{($initialHeight)});
+		padding: $_padding 18px $_padding 0;
+		height: calc(100% - #{($initialHeight + ($_padding * 2))});
 		border-top: 1px solid rgba($borderColor, 0.35);
 		
 	}
 
 	li{
 
+		position: relative;
 		display: block;
 		height: 30px;
+		width: 100%;
 		list-style:none;
-		padding: 5px 0 0 0 ;
-		transition: all 300ms ease;
 		padding: 0 $sidePadding;
+		line-height: 29.5px;
+		transition: all 300ms ease;
 
 		&:hover{
 
@@ -121,13 +126,17 @@ $dropdownEasing: cubic-bezier(0.230, 1.000, 0.320, 1.000);
 			display:inline-block;
 		}
 
-		span{ height: 100%; margin: 0 0 0 4px ;}
+		span{ height: 100%; }
 
 		i{
+			position: relative;
 			height: 30px;
 			width: 30px;
+			margin: 0 4px 0 0 ;
+			top:50%;
+			transform: translateY(-50%);
 			background-size: 17px 17px;
-			background-position: 50% 50%;
+			background-position: 50% 48%;
 			background-repeat: no-repeat;
 		}
 
