--- a/src/style/pg-ng-dropdown.css
+++ b/src/style/pg-ng-dropdown.css
@@ -6,8 +6,15 @@ body {
   color: floralwhite;
   background-color: cadetblue; }
 
-.pg-dropdown {
+article {
+  width: 100%;
+  text-align: center; }
+
+.pg-dropdown:not(:last-child) {
   margin: 0 50px 0 0; }
+
+.container {
+  display: inline-block; }
 
 .pg-dropdown {
   position: relative;
