--- a/src/style/pg-ng-dropdown.css
+++ b/src/style/pg-ng-dropdown.css
@@ -60,7 +60,7 @@ article {
     overflow-y: auto;
     overflow-x: hidden;
     margin: 0;
-    padding: 6px 24px 6px 0;
+    padding: 6px 0;
     height: calc(100% - 52px);
     border-top: 1px solid rgba(72, 72, 72, 0.35); }
   .pg-dropdown li {
@@ -68,10 +68,14 @@ article {
     display: block;
     height: 30px;
     width: 100%;
-    list-style: none;
     padding: 0 12px;
+    list-style: none;
+    text-align: left;
     line-height: 29.5px;
-    transition: all 300ms ease; }
+    transition: all 300ms ease;
+    box-sizing: border-box; }
+    .pg-dropdown li span {
+      overflow: hidden; }
     .pg-dropdown li:hover {
       background-color: #333; }
     .pg-dropdown li.selected * {
