--- a/src/style/pg-ng-dropdown.css
+++ b/src/style/pg-ng-dropdown.css
@@ -24,7 +24,7 @@ article {
   border-radius: 4px;
   cursor: pointer;
   overflow: hidden;
-  transition: height 425ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: height 425ms cubic-bezier(0.23, 1, 0.32, 1), background-color 300ms ease;
   float: left; }
   .pg-dropdown .arrow-wrapper {
     position: absolute;
@@ -99,3 +99,5 @@ article {
     background-repeat: no-repeat; }
   .pg-dropdown.opened {
     height: 215px; }
+  .pg-dropdown:focus {
+    background-color: #5f5f5f; }
