Add up/down arrow, esc and enter for selecting functionality

--- a/src/style/pg-ng-dropdown.css
+++ b/src/style/pg-ng-dropdown.css
@@ -76,7 +76,7 @@ article {
     box-sizing: border-box; }
     .pg-dropdown li span {
       overflow: hidden; }
-    .pg-dropdown li:hover {
+    .pg-dropdown li:hover, .pg-dropdown li.focused {
       background-color: #333; }
     .pg-dropdown li.selected * {
       opacity: 0.4; }
