--- a/src/style/pg-ng-dropdown.scss
+++ b/src/style/pg-ng-dropdown.scss
@@ -107,7 +107,7 @@ $dropdownEasing: cubic-bezier(0.230, 1.000, 0.320, 1.000);
 
 		span{ overflow:hidden; }
 
-		&:hover{
+		&:hover, &.focused{
 
 			background-color: #333;
 
