--- a/src/style/pg-ng-dropdown.css
+++ b/src/style/pg-ng-dropdown.css
@@ -16,6 +16,9 @@ article {
 .container {
   display: inline-block; }
 
+[dynamic-height=true] .dropdown-content {
+  overflow: hidden !important; }
+
 .pg-dropdown {
   position: relative;
   height: 40px;
@@ -25,6 +28,7 @@ article {
   cursor: pointer;
   overflow: hidden;
   transition: height 425ms cubic-bezier(0.23, 1, 0.32, 1), background-color 300ms ease;
+  box-sizing: border-box;
   float: left; }
   .pg-dropdown .arrow-wrapper {
     position: absolute;
