--- a/src/style/pg-ng-dropdown.scss
+++ b/src/style/pg-ng-dropdown.scss
@@ -25,6 +25,16 @@ $backgroundColor: dimgrey;
 $arrowColor: floralwhite;
 $dropdownEasing: cubic-bezier(0.230, 1.000, 0.320, 1.000);
 
+[dynamic-height=true]{
+
+	.dropdown-content{
+
+		overflow: hidden !important;
+
+	}
+
+}
+
 .pg-dropdown{
 
 	position: relative;
@@ -35,6 +45,7 @@ $dropdownEasing: cubic-bezier(0.230, 1.000, 0.320, 1.000);
 	cursor:pointer;
 	overflow: hidden;
 	transition: height 425ms $dropdownEasing, background-color 300ms ease;
+	box-sizing: border-box;
 	float:left;
 
 	.arrow-wrapper{
