--- a/src/style/pg-ng-dropdown.scss
+++ b/src/style/pg-ng-dropdown.scss
@@ -172,6 +172,13 @@ $dropdownEasing: cubic-bezier(0.230, 1.000, 0.320, 1.000);
 
 	}
 
+	&.disabled{
+
+		opacity: 0.2;
+		cursor: not-allowed;
+
+	}
+
 	&:focus{
 
 		background-color: darken($backgroundColor, 4);
