--- a/src/style/pg-ng-dropdown.css
+++ b/src/style/pg-ng-dropdown.css
@@ -16,6 +16,12 @@ article {
 .container {
   display: inline-block; }
 
+[dynamic-height=true] .dropdown-content {
+  overflow: hidden !important; }
+
+[image-options=true] {
+  width: 260px !important; }
+
 .pg-dropdown {
   position: relative;
   height: 40px;
@@ -24,7 +30,8 @@ article {
   border-radius: 4px;
   cursor: pointer;
   overflow: hidden;
-  transition: height 425ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: height 425ms cubic-bezier(0.23, 1, 0.32, 1), background-color 300ms ease;
+  box-sizing: border-box;
   float: left; }
   .pg-dropdown .arrow-wrapper {
     position: absolute;
@@ -76,7 +83,7 @@ article {
     box-sizing: border-box; }
     .pg-dropdown li span {
       overflow: hidden; }
-    .pg-dropdown li:hover {
+    .pg-dropdown li:hover, .pg-dropdown li.focused {
       background-color: #333; }
     .pg-dropdown li.selected * {
       opacity: 0.4; }
@@ -99,3 +106,8 @@ article {
     background-repeat: no-repeat; }
   .pg-dropdown.opened {
     height: 215px; }
+  .pg-dropdown.disabled {
+    opacity: 0.2;
+    cursor: not-allowed; }
+  .pg-dropdown:focus {
+    background-color: #5f5f5f; }
